[gd_scene load_steps=58 format=2]

[ext_resource path="res://Sprites/BossWorm_Sprites/Idle.png" type="Texture" id=1]
[ext_resource path="res://Resources_Scenes/WormBoss/Worm.gd" type="Script" id=2]
[ext_resource path="res://Sprites/BossWorm_Sprites/Attack.png" type="Texture" id=3]
[ext_resource path="res://Sprites/BossWorm_Sprites/Walk.png" type="Texture" id=4]
[ext_resource path="res://Sprites/BossWorm_Sprites/Death.png" type="Texture" id=5]
[ext_resource path="res://Sprites/BossWorm_Sprites/Get Hit.png" type="Texture" id=6]
[ext_resource path="res://Resources_Scenes/WormBoss/Boss_wakeup.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 13.5 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 5 )
region = Rect2( 90, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 180, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 5 )
region = Rect2( 270, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 5 )
region = Rect2( 360, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 5 )
region = Rect2( 450, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 5 )
region = Rect2( 540, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 5 )
region = Rect2( 630, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 90, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 180, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 270, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 360, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 450, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 540, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 630, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 720, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 810, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 900, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 990, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 1080, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 1170, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 1260, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 1350, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 6 )
region = Rect2( 90, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 6 )
region = Rect2( 180, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 90, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 180, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 270, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 360, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 540, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 630, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 720, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 90, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 270, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 540, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 630, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 720, 0, 90, 90 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "getHit",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 5.25, 27.5469 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 8.5, 4.5 )

[sub_resource type="CircleShape2D" id=50]
radius = 8.39329

[node name="Worm" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -29, -14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, -3.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4, -2 )
frames = SubResource( 11 )
animation = "Attack"
frame = 11
playing = true
flip_h = true

[node name="l_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 524290

[node name="hitbox_l" type="Area2D" parent="." groups=["hitbox", "hitbox_l"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_l"]
position = Vector2( -18, -11.8125 )
shape = SubResource( 12 )

[node name="hitbox_r" type="Area2D" parent="." groups=["hitbox", "hitbox_r"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_r"]
position = Vector2( 17, -12 )
shape = SubResource( 12 )

[node name="hurtbox" type="Area2D" parent="."]
position = Vector2( -4, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( -13, -17 )
shape = SubResource( 13 )

[node name="Boss_wakeup" type="Area2D" parent="." groups=["bossWakeUp"]]
scale = Vector2( 2.75739, 0.524129 )
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss_wakeup"]
position = Vector2( -24.661, -1.90793 )
scale = Vector2( 5.04681, 6.4163 )
shape = SubResource( 50 )

[connection signal="area_entered" from="hitbox_l" to="." method="_on_hitbox_l_area_entered"]
[connection signal="area_entered" from="hitbox_r" to="." method="_on_hitbox_r_area_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="Boss_wakeup" to="." method="_on_Boss_wakeup_body_entered"]
